Another rotation issue solved & New building implemented, Mining Drill Building

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -49,7 +49,10 @@
     <Compile Include="Assets\GAME\WorldResources\Scripts\ResourceMaterial.cs" />
     <Compile Include="Assets\GAME\World\Scripts\Chunk.cs" />
     <Compile Include="Assets\GAME\Scripts\MathUtils.cs" />
+    <Compile Include="Assets\GAME\Buildings\Scripts\MiningDrillBuilding.cs" />
     <Compile Include="Assets\GAME\Player\Scripts\PlayerMover.cs" />
+    <Compile Include="Assets\GAME\Buildings\Scripts\IBuilding.cs" />
+    <Compile Include="Assets\GAME\Scripts\AudioManager.cs" />
     <Compile Include="Assets\GAME\Scripts\UI\PlayerMoneyUI.cs" />
     <Compile Include="Assets\GAME\World\Scripts\Cell.cs" />
     <Compile Include="Assets\GAME\World\Scripts\WorldManager.cs" />
