--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Assets\GAME\World\Scripts\Chunk.cs" />
     <Compile Include="Assets\GAME\Scripts\MathUtils.cs" />
     <Compile Include="Assets\GAME\Buildings\Scripts\MiningDrillBuilding.cs" />
+    <Compile Include="Assets\TODO\ToDo_SO.cs" />
     <Compile Include="Assets\GAME\Player\Scripts\PlayerMover.cs" />
     <Compile Include="Assets\GAME\Buildings\Scripts\IBuilding.cs" />
     <Compile Include="Assets\GAME\Scripts\AudioManager.cs" />
