--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -941,6 +941,9 @@
     <Reference Include="Unity.VisualScripting.State">
       <HintPath>C:\UnityProjects\SurvivalClicker\Library\ScriptAssemblies\Unity.VisualScripting.State.dll</HintPath>
     </Reference>
+    <Reference Include="Unity.2D.Sprite.Editor">
+      <HintPath>C:\UnityProjects\SurvivalClicker\Library\ScriptAssemblies\Unity.2D.Sprite.Editor.dll</HintPath>
+    </Reference>
     <Reference Include="Unity.AI.Navigation.Editor.ConversionSystem">
       <HintPath>C:\UnityProjects\SurvivalClicker\Library\ScriptAssemblies\Unity.AI.Navigation.Editor.ConversionSystem.dll</HintPath>
     </Reference>
