--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Assets\GAME\UI\Scripts\InventoryTooltip.cs" />
     <Compile Include="Assets\GAME\Player\Scripts\PlayerMouse\PlayerMouse.cs" />
     <Compile Include="Assets\GAME\Buildings\Scripts\MarketBuilding.cs" />
+    <Compile Include="Assets\GAME\World\Scripts\Island.cs" />
     <Compile Include="Assets\GAME\Scripts\EditorModMenu.cs" />
     <Compile Include="Assets\GAME\Player\Scripts\BuildingObject.cs" />
     <Compile Include="Assets\GAME\UI\Scripts\UpgradeController.cs" />
